Update to work with Plugins V2

--- a/src/[PLUGINNAME].ini
+++ b/src/[PLUGINNAME].ini
@@ -1,7 +1,7 @@
 ﻿[GlumSakPlugin]
 
 ;Name of the Plugin that is going to be displayed in GlumSak
-PluginName=DiscordRPC
+PluginName=PluginName
 
 ;Entry point that GlumSak tries to execute
 Entrypoint=PluginEntryPoint
@@ -10,10 +10,10 @@ Entrypoint=PluginEntryPoint
 Class=Plugin
 
 ;Namespace of the Entrypoint-class
-Namespace=DiscordRPCPlugin
+Namespace=DiscordRPC
 
 ;Parameters of plugin
 Params=
 
 ;Icon of the Plugin
-PluginIcon=icon.png
+PluginIcon=
